# cpp-examples

./: .gitignore  CMakeLists.txt  Readme.md
asynchronify/: CMakeLists.txt  asynchronify.cpp
class-templ-arg-deduction/: CMakeLists.txt  class-templ-arg-deduction.cpp
constexpr-if/: CMakeLists.txt  constexpr-if.cpp
digit-separators/: CMakeLists.txt  digit-separators.cpp
next-bigger/: CMakeLists.txt  next-bigger.cpp
parallel-sort/: CMakeLists.txt  README.md  parallel-sort.cpp
performance-test/: CMakeLists.txt  README.md  performance-test.cpp
reverse-iterators/: CMakeLists.txt  reverse-iterators.cpp
structured-bindings/: CMakeLists.txt  structured-bindings.cpp
variable-arguments/: CMakeLists.txt  variable-arguments.cpp
