cmake_minimum_required(VERSION 3.14)

project(cpp-examples)

add_subdirectory(asynchronify)
add_subdirectory(class-templ-arg-deduction)
add_subdirectory(constexpr-if)
add_subdirectory(digit-separators)
add_subdirectory(next-bigger)
add_subdirectory(parallel-sort)
add_subdirectory(performance-test)
add_subdirectory(reverse-iterators)
add_subdirectory(structured-bindings)
add_subdirectory(variable-arguments)

